Added nice google font

--- a/simplechat.less
+++ b/simplechat.less
@@ -1,6 +1,6 @@
 body {
   background-color: #eee;
-  font-family: Helvetica, Verdana, sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .clearfix {
@@ -109,7 +109,8 @@ body {
     display: block;
     margin: auto;
     width: 820px;
-    color: #999;
+    color: #555;
+    font-size: 36px;
   }
 
   #input {
