Fixed padding on userlist

--- a/simplechat.less
+++ b/simplechat.less
@@ -97,7 +97,7 @@ body {
       border-radius: 5px;
       width: 130px;
       height: 400px;
-      padding: 10px 10px 5px;
+      padding: 5px 10px;
       float: right;
       line-height: 18px;
       color: #800000;
