Fixed userlist height

--- a/simplechat.less
+++ b/simplechat.less
@@ -96,8 +96,8 @@ body {
       -webkit-border-radius: 5px;
       border-radius: 5px;
       width: 130px;
-      height: 400px;
-      padding: 5px 10px;
+      height: 405px;
+      padding: 5px 10px 5px;
       float: right;
       line-height: 18px;
       color: #800000;
